fixed css flex on wraper1

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -259,7 +259,7 @@ html {
 
     }
     .filename{
-        writing-mode:vertical-lr;
+        writing-mode:vertical-rl;
         transform: rotate(180deg);
 
     }
